test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-owned.good
init-var-nonnil-shared-from-oknil-owned.chpl:9: error: cannot assign to a non-nilable shared variable from a nilable class
